TEST_PROGRAMS/VALID/09/type_decl.go
package types

type num int
type parens string
type point struct {x, y  float64; }
type emptyStruct struct {}
type basicOperand int
type point3D struct {x, y, z  float64; a  int; a, str  string; }
type int_list [19348] int
type string_slice [] somefloat
type _ int
type first int
type second float64

func main() {
	type a float64
}
